--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "homebridge-shelly-ng",
+  "name": "@jupgt/homebridge-shelly-ng",
   "version": "1.6.0",
   "description": "Homebridge plugin for the next generation of Shelly devices",
   "main": "dist/index.js",
@@ -16,23 +16,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexryd/homebridge-shelly-ng.git"
+    "url": "git+https://github.com/julienpouget/homebridge-shelly-ng.git"
   },
   "keywords": [
     "homebridge",
     "homebridge-plugin",
     "shelly"
   ],
-  "author": "Alexander Rydén",
+  "author": "Julien Pouget",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/alexryd/homebridge-shelly-ng/issues"
+    "url": "https://github.com/julienpouget/homebridge-shelly-ng/issues"
   },
-  "homepage": "https://github.com/alexryd/homebridge-shelly-ng#readme",
-  "funding": {
-    "type": "kofi",
-    "url": "https://ko-fi.com/alexryd"
-  },
+  "homepage": "https://github.com/julienpouget/homebridge-shelly-ng#readme",
   "devDependencies": {
     "@types/jest": "^28.1.2",
     "@types/node": "^18.0.0",
@@ -46,6 +42,6 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "shellies-ng": "julienpouget/node-shellies-ng"
+    "shellies-ng": "@jupgt/shellies-ng"
   }
 }
