--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@jupgt/homebridge-shelly-ng",
+  "displayName": "Shelly NG (@jupgt)",
   "version": "1.6.0",
   "description": "Homebridge plugin for the next generation of Shelly devices",
   "main": "dist/index.js",
